# create-rzpack

./: Cargo.toml  README.md
src/: main.rs
src/utils/: args.rs  file.rs  json.rs  log.rs  mod.rs  pkg.rs  prompts.rs  tools.rs
src/utils/render/: config.rs  mod.rs  package.rs  template.rs
