[package]
name = "create-rzpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
dialoguer = "0.10.4"
maplit = "1.0.2"
regex = "1.9.3"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"
rust-embed = "6.8.1"
colorful = "0.2.2"
remove_dir_all = "0.8.2"
